Wrote 12/22/20 Journal Entry

--- a/Jupyter_Notebook_Daily_Journal.ipynb
+++ b/Jupyter_Notebook_Daily_Journal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,10 +50,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def editor(fname):\n",
+    "    textarea = ipywidgets.Textarea(continuous_update=False)\n",
+    "    textarea.rows = 20\n",
+    "    output = ipywidgets.Output()\n",
+    "    runner = functools.partial(subprocess.run, capture_output=True, text=True, check=True)\n",
+    "    def save(_ignored):\n",
+    "        with output:\n",
+    "            with open(fname, \"w\") as fpout:\n",
+    "                fpout.write(textarea.value)\n",
+    "            print(\"Sending...\", end='')\n",
+    "            try:\n",
+    "                runner([\"git\", \"add\", fname])\n",
+    "                runner([\"git\", \"commit\", \"-m\", f\"updated {fname}\"])\n",
+    "                runner([\"git\", \"push\"])\n",
+    "            except subprocess.CalledProcessError as exc:\n",
+    "                print(\"Could not send\")\n",
+    "                print(exc.stdout)\n",
+    "                print(exc.stderr)\n",
+    "            else:\n",
+    "                 print(\"Done\")\n",
+    "    textarea.observe(save, names=\"value\")\n",
+    "    return textarea, output, save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def journal():\n",
+    "    date = str(datetime.date.today())\n",
+    "    title = f\"Log: Startdate {date}\"\n",
+    "    filename = os.path.join(f\"{date}.txt\")\n",
+    "    d, clock = time_out_counter(reactor)\n",
+    "    textarea, output, save = editor(filename)\n",
+    "    box = ipywidgets.VBox([\n",
+    "        ipywidgets.Label(title),\n",
+    "        textarea,\n",
+    "        clock,\n",
+    "        output\n",
+    "    ])\n",
+    "    d.addCallback(save)\n",
+    "    return box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b95c0e8452f47b6a1e7d8bb54124d23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Log: Startdate 2020-12-22'), Textarea(value='', continuous_update=False, rows=20),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "journal()"
+   ]
   }
  ],
  "metadata": {
