Updated time duration and added disclaimer

--- a/Jupyter_Notebook_Daily_Journal.ipynb
+++ b/Jupyter_Notebook_Daily_Journal.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily Journal Jupyter Notebook Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a Jupyter Notebook with code copied directly from Moshe Zadka's article on opensource.com about writing daily journals in Jupyter Notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def time_out_counter(reactor):\n",
-    "    label = ipywidgets.Label(\"Time left: 5:00\")\n",
-    "    current_seconds = datetime.timedelta(minutes=5).total_seconds()\n",
+    "    label = ipywidgets.Label(\"Time left: 10:00\")\n",
+    "    current_seconds = datetime.timedelta(minutes=10).total_seconds()\n",
     "    def decrement(count):\n",
     "        nonlocal current_seconds\n",
     "        current_seconds -= count\n",
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,24 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b95c0e8452f47b6a1e7d8bb54124d23",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Log: Startdate 2020-12-22'), Textarea(value='', continuous_update=False, rows=20),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "journal()"
    ]
