--- a/Jupyter_Notebook_Daily_Journal.ipynb
+++ b/Jupyter_Notebook_Daily_Journal.ipynb
@@ -18,7 +18,54 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting twisted\n",
+      "  Downloading Twisted-20.3.0-cp37-cp37m-macosx_10_6_intel.whl (3.1 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.1 MB 2.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting incremental>=16.10.1\n",
+      "  Using cached incremental-17.5.0-py2.py3-none-any.whl (16 kB)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from twisted) (19.3.0)\n",
+      "Collecting constantly>=15.1\n",
+      "  Using cached constantly-15.1.0-py2.py3-none-any.whl (7.9 kB)\n",
+      "Collecting Automat>=0.3.0\n",
+      "  Using cached Automat-20.2.0-py2.py3-none-any.whl (31 kB)\n",
+      "Collecting zope.interface>=4.4.2\n",
+      "  Downloading zope.interface-5.2.0-cp37-cp37m-macosx_10_9_x86_64.whl (193 kB)\n",
+      "\u001b[K     |████████████████████████████████| 193 kB 20.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting PyHamcrest!=1.10.0,>=1.9.0\n",
+      "  Using cached PyHamcrest-2.0.2-py3-none-any.whl (52 kB)\n",
+      "Collecting hyperlink>=17.1.1\n",
+      "  Using cached hyperlink-20.0.1-py2.py3-none-any.whl (48 kB)\n",
+      "Requirement already satisfied: six in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from Automat>=0.3.0->twisted) (1.14.0)\n",
+      "Requirement already satisfied: setuptools in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from zope.interface>=4.4.2->twisted) (46.0.0.post20200309)\n",
+      "Requirement already satisfied: idna>=2.5 in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from hyperlink>=17.1.1->twisted) (2.8)\n",
+      "Installing collected packages: incremental, constantly, Automat, zope.interface, PyHamcrest, hyperlink, twisted\n",
+      "Successfully installed Automat-20.2.0 PyHamcrest-2.0.2 constantly-15.1.0 hyperlink-20.0.1 incremental-17.5.0 twisted-20.3.0 zope.interface-5.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install twisted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: UserWarning: You do not have a working installation of the service_identity module: 'No module named 'service_identity''.  Please install it from <https://pypi.python.org/pypi/service_identity> and make sure all of its dependencies are satisfied.  Without the service_identity module, Twisted can perform only rudimentary TLS client hostname verification.  Many valid certificate/hostname mappings may be rejected.\n"
+     ]
+    }
+   ],
    "source": [
     "import twisted.internet.asyncioreactor\n",
     "twisted.internet.asyncioreactor.install()\n",
@@ -28,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,18 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55feae76c4d548c2b0949c29a4cd4240",
+       "model_id": "a68a372084454a23bbd638749d01a4cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Log: Startdate 2020-12-25'), Textarea(value='', continuous_update=False, rows=20),…"
+       "VBox(children=(Label(value='Log: Startdate 2020-12-26'), Textarea(value='', continuous_update=False, rows=20),…"
       ]
      },
      "metadata": {},
@@ -155,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
