--- a/Jupyter_Notebook_Daily_Journal.ipynb
+++ b/Jupyter_Notebook_Daily_Journal.ipynb
@@ -17,40 +17,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting twisted\n",
-      "  Downloading Twisted-20.3.0-cp37-cp37m-macosx_10_6_intel.whl (3.1 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.1 MB 2.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting incremental>=16.10.1\n",
-      "  Using cached incremental-17.5.0-py2.py3-none-any.whl (16 kB)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from twisted) (19.3.0)\n",
-      "Collecting constantly>=15.1\n",
-      "  Using cached constantly-15.1.0-py2.py3-none-any.whl (7.9 kB)\n",
-      "Collecting Automat>=0.3.0\n",
-      "  Using cached Automat-20.2.0-py2.py3-none-any.whl (31 kB)\n",
-      "Collecting zope.interface>=4.4.2\n",
-      "  Downloading zope.interface-5.2.0-cp37-cp37m-macosx_10_9_x86_64.whl (193 kB)\n",
-      "\u001b[K     |████████████████████████████████| 193 kB 20.2 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting PyHamcrest!=1.10.0,>=1.9.0\n",
-      "  Using cached PyHamcrest-2.0.2-py3-none-any.whl (52 kB)\n",
-      "Collecting hyperlink>=17.1.1\n",
-      "  Using cached hyperlink-20.0.1-py2.py3-none-any.whl (48 kB)\n",
-      "Requirement already satisfied: six in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from Automat>=0.3.0->twisted) (1.14.0)\n",
-      "Requirement already satisfied: setuptools in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from zope.interface>=4.4.2->twisted) (46.0.0.post20200309)\n",
-      "Requirement already satisfied: idna>=2.5 in /Users/josephheadley/opt/anaconda3/lib/python3.7/site-packages (from hyperlink>=17.1.1->twisted) (2.8)\n",
-      "Installing collected packages: incremental, constantly, Automat, zope.interface, PyHamcrest, hyperlink, twisted\n",
-      "Successfully installed Automat-20.2.0 PyHamcrest-2.0.2 constantly-15.1.0 hyperlink-20.0.1 incremental-17.5.0 twisted-20.3.0 zope.interface-5.2.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "pip install twisted"
+    "#pip install twisted"
    ]
   },
   {
@@ -169,12 +141,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a68a372084454a23bbd638749d01a4cb",
+       "model_id": "41a446d7cd6042b4a32278ceaf353d90",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Log: Startdate 2020-12-26'), Textarea(value='', continuous_update=False, rows=20),…"
+       "VBox(children=(Label(value='Log: Startdate 2020-12-27'), Textarea(value='', continuous_update=False, rows=20),…"
       ]
      },
      "metadata": {},
